--- a/build.yaml
+++ b/build.yaml
@@ -30,7 +30,9 @@ filegroups:
   - src/core/ext/census/placeholders.c
   - src/core/ext/census/tracing.c
   plugin: census_grpc_plugin
-- name: gpr
+  uses:
+  - grpc_base
+- name: gpr_base
   public_headers:
   - include/grpc/support/alloc.h
   - include/grpc/support/atm.h
@@ -118,6 +120,8 @@ filegroups:
   - src/core/lib/support/tmpfile_posix.c
   - src/core/lib/support/tmpfile_win32.c
   - src/core/lib/support/wrap_memcpy.c
+  uses:
+  - gpr_codegen
 - name: gpr_codegen
   public_headers:
   - include/grpc/impl/codegen/alloc.h
@@ -211,6 +215,10 @@ filegroups:
   - src/cpp/util/status.cc
   - src/cpp/util/string_ref.cc
   - src/cpp/util/time.cc
+  deps:
+  - grpc
+  uses:
+  - grpc++_codegen
 - name: grpc++_codegen
   public_headers:
   - include/grpc++/impl/codegen/async_stream.h
@@ -246,6 +254,8 @@ filegroups:
   - include/grpc++/impl/codegen/time.h
   src:
   - src/cpp/codegen/codegen_init.cc
+  deps:
+  - grpc
 - name: grpc_base
   public_headers:
   - include/grpc/byte_buffer.h
@@ -320,6 +330,7 @@ filegroups:
   - src/core/lib/surface/lame_client.h
   - src/core/lib/surface/server.h
   - src/core/lib/surface/surface_trace.h
+  - src/core/lib/transport/bin_encoder.h
   - src/core/lib/transport/byte_stream.h
   - src/core/lib/transport/connectivity_state.h
   - src/core/lib/transport/metadata.h
@@ -403,6 +414,7 @@ filegroups:
   - src/core/lib/surface/server.c
   - src/core/lib/surface/validate_metadata.c
   - src/core/lib/surface/version.c
+  - src/core/lib/transport/bin_encoder.c
   - src/core/lib/transport/byte_stream.c
   - src/core/lib/transport/connectivity_state.c
   - src/core/lib/transport/metadata.c
@@ -410,6 +422,10 @@ filegroups:
   - src/core/lib/transport/static_metadata.c
   - src/core/lib/transport/transport.c
   - src/core/lib/transport/transport_op_string.c
+  deps:
+  - gpr
+  uses:
+  - grpc_codegen
 - name: grpc_client_config
   headers:
   - src/core/ext/client_config/client_channel.h
@@ -445,6 +461,8 @@ filegroups:
   - src/core/ext/client_config/subchannel_call_holder.c
   - src/core/ext/client_config/subchannel_index.c
   - src/core/ext/client_config/uri_parser.c
+  uses:
+  - grpc_base
 - name: grpc_codegen
   public_headers:
   - include/grpc/impl/codegen/byte_buffer.h
@@ -453,6 +471,8 @@ filegroups:
   - include/grpc/impl/codegen/grpc_types.h
   - include/grpc/impl/codegen/propagation_bits.h
   - include/grpc/impl/codegen/status.h
+  deps:
+  - gpr
 - name: grpc_lb_policy_grpclb
   headers:
   - src/core/ext/lb_policy/grpclb/load_balancer_api.h
@@ -463,6 +483,7 @@ filegroups:
   uses:
   - grpc_base
   - grpc_client_config
+  - nanopb
 - name: grpc_lb_policy_pick_first
   src:
   - src/core/ext/lb_policy/pick_first/pick_first.c
@@ -492,6 +513,8 @@ filegroups:
   - grpc_base
   - grpc_client_config
 - name: grpc_secure
+  public_headers:
+  - include/grpc/grpc_security.h
   headers:
   - src/core/lib/security/auth_filters.h
   - src/core/lib/security/b64.h
@@ -527,6 +550,9 @@ filegroups:
   - src/core/lib/tsi/fake_transport_security.c
   - src/core/lib/tsi/ssl_transport_security.c
   - src/core/lib/tsi/transport_security.c
+  uses:
+  - grpc_base
+  - grpc_transport_chttp2_alpn
 - name: grpc_test_util_base
   headers:
   - test/core/end2end/cq_verifier.h
@@ -547,10 +573,11 @@ filegroups:
   - test/core/util/port_server_client.c
   - test/core/util/port_windows.c
   - test/core/util/slice_splitter.c
+  deps:
+  - grpc
+  - gpr_test_util
 - name: grpc_transport_chttp2
   headers:
-  - src/core/ext/transport/chttp2/transport/alpn.h
-  - src/core/ext/transport/chttp2/transport/bin_encoder.h
   - src/core/ext/transport/chttp2/transport/chttp2_transport.h
   - src/core/ext/transport/chttp2/transport/frame.h
   - src/core/ext/transport/chttp2/transport/frame_data.h
@@ -571,8 +598,6 @@ filegroups:
   - src/core/ext/transport/chttp2/transport/timeout_encoding.h
   - src/core/ext/transport/chttp2/transport/varint.h
   src:
-  - src/core/ext/transport/chttp2/transport/alpn.c
-  - src/core/ext/transport/chttp2/transport/bin_encoder.c
   - src/core/ext/transport/chttp2/transport/chttp2_transport.c
   - src/core/ext/transport/chttp2/transport/frame_data.c
   - src/core/ext/transport/chttp2/transport/frame_goaway.c
@@ -594,18 +619,29 @@ filegroups:
   - src/core/ext/transport/chttp2/transport/writing.c
   uses:
   - grpc_base
+  - grpc_transport_chttp2_alpn
+- name: grpc_transport_chttp2_alpn
+  headers:
+  - src/core/ext/transport/chttp2/alpn/alpn.h
+  src:
+  - src/core/ext/transport/chttp2/alpn/alpn.c
+  deps:
+  - gpr
 - name: grpc_transport_chttp2_client_insecure
   src:
   - src/core/ext/transport/chttp2/client/insecure/channel_create.c
   uses:
   - grpc_transport_chttp2
   - grpc_base
+  - grpc_client_config
 - name: grpc_transport_chttp2_client_secure
   src:
   - src/core/ext/transport/chttp2/client/secure/secure_channel_create.c
   uses:
   - grpc_transport_chttp2
   - grpc_base
+  - grpc_client_config
+  - grpc_secure
 - name: grpc_transport_chttp2_server_insecure
   src:
   - src/core/ext/transport/chttp2/server/insecure/server_chttp2.c
@@ -618,6 +654,7 @@ filegroups:
   uses:
   - grpc_transport_chttp2
   - grpc_base
+  - grpc_secure
 - name: nanopb
   headers:
   - third_party/nanopb/pb.h
@@ -633,8 +670,7 @@ libs:
   build: all
   language: c
   filegroups:
-  - gpr
-  - gpr_codegen
+  - gpr_base
   secure: false
   vs_project_guid: '{B23D3D1A-9438-4EDA-BEB6-9A0A03D17792}'
 - name: gpr_test_util
@@ -651,8 +687,6 @@ libs:
 - name: grpc
   build: all
   language: c
-  public_headers:
-  - include/grpc/grpc_security.h
   deps:
   - gpr
   baselib: true
