--- a/build.yaml
+++ b/build.yaml
@@ -254,6 +254,7 @@ filegroups:
   - include/grpc/grpc.h
   - include/grpc/status.h
   headers:
+  - src/core/ext/load_reporting/load_reporting_filter.h
   - src/core/lib/channel/channel_args.h
   - src/core/lib/channel/channel_stack.h
   - src/core/lib/channel/channel_stack_builder.h
@@ -308,6 +309,7 @@ filegroups:
   - src/core/lib/json/json_common.h
   - src/core/lib/json/json_reader.h
   - src/core/lib/json/json_writer.h
+  - src/core/lib/load_reporting/load_reporting.h
   - src/core/lib/surface/api_trace.h
   - src/core/lib/surface/call.h
   - src/core/lib/surface/call_test_only.h
@@ -328,6 +330,7 @@ filegroups:
   - src/core/lib/transport/transport.h
   - src/core/lib/transport/transport_impl.h
   src:
+  - src/core/ext/load_reporting/load_reporting_filter.c
   - src/core/lib/channel/channel_args.c
   - src/core/lib/channel/channel_stack.c
   - src/core/lib/channel/channel_stack_builder.c
@@ -384,6 +387,7 @@ filegroups:
   - src/core/lib/json/json_reader.c
   - src/core/lib/json/json_string.c
   - src/core/lib/json/json_writer.c
+  - src/core/lib/load_reporting/load_reporting.c
   - src/core/lib/surface/alarm.c
   - src/core/lib/surface/api_trace.c
   - src/core/lib/surface/byte_buffer.c
@@ -1850,6 +1854,16 @@ targets:
   language: c
   src:
   - test/core/client_config/lb_policies_test.c
+  deps:
+  - grpc_test_util
+  - grpc
+  - gpr_test_util
+  - gpr
+- name: load_reporting_registration_test
+  build: test
+  language: c
+  src:
+  - test/core/load_reporting/load_reporting_registration.c
   deps:
   - grpc_test_util
   - grpc
